# Cocos2dxGAFPlayer

./: .gitignore  Android.mk  GAFPlayer.sln  GAFPlayer_vc10.sln  README.md
Examples/: CMakeLists.txt  Examples.vcxproj  Examples.vcxproj.filters  Examples_vc10.vcxproj  Examples_vc10.vcxproj.filters
Examples/Classes/: AppController.mm  AppDelegate.cpp  AppDelegate.h  AppDelegateGafFeatures.cpp  AppDelegateGafFeatures.h  GafFeatures.cpp  GafFeatures.h  GafFeatures_.cpp  GafFeatures_.h
Examples/Example.android/: .classpath  .cproject  .project  AndroidManifest.xml  README.md  build-cfg.json  build.xml  build_native.py  build_native.sh  project.properties
Examples/Example.android/jni/: Android.mk  Application.mk
Examples/Example.android/jni/gafexample/: main.cpp
Examples/Example.android/res/drawable-hdpi/SampleAnimations/4/: 4.json
Examples/Example.android/res/drawable-hdpi/Shaders/: GlowFragmentShader.fs  GlowVertexShader.vs  pcShader_PositionTextureAlpha_frag_noCTX.fs
Examples/Example.android/res/drawable-hdpi/jester/: jesterBin.gaf
Examples/Example.android/res/drawable-hdpi/slime/: slimeBin.gaf
Examples/Example.android/res/drawable-hdpi/ufo/: ufoBin.gaf
Examples/Example.android/res/values/: strings.xml
Examples/Example.android/src/org/cocos2dx/gafexample/: AppActivity.java  GAFExample.java
Examples/Example.ios/Example/: Example-Info.plist
Examples/Example.ios/Example.xcodeproj/: project.pbxproj
Examples/Example.ios/Example.xcodeproj/project.xcworkspace/xcshareddata/: Example.xccheckout
Examples/Example.ios/Example.xcodeproj/project.xcworkspace/xcuserdata/sergeymikushev.xcuserdatad/: UserInterfaceState.xcuserstate
Examples/Example.ios/Example.xcodeproj/xcuserdata/sergeymikushev.xcuserdatad/xcschemes/: Example.xcscheme  xcschememanagement.plist
Examples/Example.win8.1-universal/: Example.sln
Examples/Example.win8.1-universal/App.Shared/: Example.Shared.vcxitems.filters
Examples/Example.win8.1-universal/App.Windows/: Example.Windows.vcxproj
Examples/Example.win8.1-universal/App.WindowsPhone/: Example.WindowsPhone.vcxproj
Examples/Example.wp8-xaml/: Example.sln
Examples/Example.wp8-xaml/App/: Example.csproj  MainPage.xaml.cs
Examples/Example.wp8-xaml/App/Properties/: WMAppManifest.xml
Examples/Example.wp8-xaml/AppComponent/: ExampleComponent.vcxproj
Examples/Example.wp8-xaml/AppComponent/src/: Direct3DInterop.cpp
Examples/Example/Example/: Example-Info.plist
Examples/Example/Example.xcodeproj/project.xcworkspace/xcuserdata/sergeymikushev.xcuserdatad/: UserInterfaceState.xcuserstate
Examples/Resources/SampleAnimations/3/: 3.json
Examples/Resources/SampleAnimations/5/: 5.json
Examples/Resources/Shaders/: GaussianBlurFragmentShader.fs  GaussianBlurVertexShader.vs  pcShader_PositionTextureAlpha_frag.fs  pcShader_PositionTextureAlpha_frag_noCTX.fs
Examples/Resources/SoundsExample_Tank/: SoundsExample_Tank.fla  SoundsExample_Tank.gaf
Examples/Resources/biggreen/: biggreen.gaf
Examples/Resources/bird_bezneba/: bird_bezneba.gaf
Examples/Resources/christmas2013_julia2/: christmas2013_julia2.gaf
Examples/Resources/fairy2/: fairy2.gaf
Examples/Resources/firemen/: firemen.gaf
Examples/Resources/impiretank_05_oneplace/: impiretank_05_oneplace.gaf
Examples/Resources/peacock_feb3_natasha/: peacock_feb3_natasha.gaf
Examples/Resources/skeleton/: skeletonBin.gaf
Examples/Resources/tiger/: tiger.gaf
Examples/demo_api/: AppDelegate.cpp  AppDelegate.h  GafApi.cpp  GafApi.h
Examples/demo_features/: AppDelegate.cpp  GafFeatures.cpp  GafFeatures.h
Resources/SampleAnimations/1/: 1.json
Resources/SampleAnimations/2/: 2.json
Resources/Shaders/: GaussianBlurFragmentShader.fs  pcBlurredSprite_Shader_VerticalBlur.fs  pcShader_PositionTextureAlpha_frag.fs  pcShader_PositionTexture_alphaFilter.fs  pcShader_masked_texture.fs
cmake/: ios-toolchain.cmake
js_bindings/: Android.mk  CMakeLists.txt  conversions.yaml.diff
js_bindings/bindings/: js_gaf_manual_conversions.cpp  js_gaf_manual_conversions.h  jsb_gaf.cpp  jsb_gaf.hpp  jsb_gaf_manual.cpp  jsb_gaf_manual.h
js_bindings/bindings/api/: jsb_gaf_api.js
js_bindings/proj.android/: Android.mk
js_bindings/proj.ios_mac/gaf_js_bindings.xcodeproj/: project.pbxproj
js_bindings/proj.ios_mac/gaf_js_bindings.xcodeproj/xcuserdata/kuznietsov.xcuserdatad/xcschemes/: gaf_js_bindings Mac.xcscheme  gaf_js_bindings iOS.xcscheme
js_bindings/proj.win32/: libGAFJSBinding.vcxproj  libGAFJSBinding.vcxproj.filters
js_bindings/tojs/: gaf.ini  genbindings_gaf.py
lua_bindings/: CMakeLists.txt  conversions.yaml.diff
lua_bindings/bindings/: lua_gaf.cpp  lua_gaf.hpp  lua_gaf_main.cpp  lua_gaf_main.hpp
lua_bindings/bindings/api/: GAFAnimationSequence.lua  GAFAsset.lua  GAFAssetTextureManager.lua  GAFMovieClip.lua  GAFObject.lua  GAFSprite.lua  lua_gaf_api.lua
lua_bindings/proj.ios_mac/gaf_lua_bindings.xcodeproj/: project.pbxproj
lua_bindings/proj.win32/: Library.props  libGAFLuaBinding.sln  libGAFLuaBinding.vcxproj
lua_bindings/tolua/: gaf.ini  genbindings.py
tests/Classes/: AppDelegate.cpp  AppDelegate.h  BaseTest.cpp  BaseTest.h  VisibleRect.h  controller.cpp  controller.h  testBasic.cpp  testBasic.h  testResource.h  tests.h
tests/Classes/BundlesTest/: BundlesTest.cpp  BundlesTest.h
tests/Classes/EventsTest/: EventsTest.cpp  EventsTest.h
tests/Classes/FiltersTest/: FiltersTest.cpp  FiltersTest.h
tests/Classes/FlipTest/: FlipTest.cpp  FlipTest.h
tests/Classes/FramePlaybackTest/: FramePlaybackTest.h  (+1 more)
tests/RawResources/: custom_event.fla  custom_event.swf  filters.fla  filters.swf  filters_alpha.fla  filters_alpha.swf  filters_tint.fla  filters_tint.swf  frame_test.fla  frame_test.swf  mask_1.fla  mask_1.swf  mask_2.fla  mask_2.swf  mask_sample.fla  mask_sample.swf  multiple_timelines.fla  multiple_timelines.swf  tf.fla  tf.swf
tests/proj.android/: .cproject  .project  AndroidManifest.xml  build.xml  build_native.py
tests/proj.win32/: GafTests.sln  GafTests.vcxproj  GafTests.vcxproj.filters
tests/proj.win8.1-universal/: GafTests.sln
tests/proj.wp8-xaml/: GafTests.sln
(+33 files in other folders)
